@@ -186,7 +186,7 @@
 								<option value="30">30 CM (12 INCHES)</option>
 								<option value="15">15 CM (6 INCHES)</option>
 							</select>
-
+							
 							<div class="form-product__price">$19.95
 								<span class="form-product__price-label">Tax included</span>
 							</div>
