@@ -646,7 +646,6 @@ body {
 		font-family: "Mulish";
 		font-size: 12px;
 		text-transform: uppercase;
-		background: url("../images/icons/icon-arrow-down.svg") center right 20px / 12px 6px no-repeat;
 
 		@media (max-width: 414px) {
 			margin-bottom: 54px;
