@@ -4,7 +4,6 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta name="theme-color" content="">
 	<link rel="canonical" href="{{ canonical_url }}">
 
@@ -29,6 +28,7 @@
 	</main>
 
 	<script src="{{ 'script.min.js' | asset_url }}" defer="defer"></script>
+	<script src="{{ 'product-slider.min.js' | asset_url }}" defer="defer"></script>
 </body>
 
 </html>
