@@ -1,0 +1,81 @@
+<div class="product">
+	<div class="product__container _container">
+
+		<div class="product__gallary gallary-product">
+
+			<div class="gallary-product__slider product-slider">
+				<div class="swiper-container product-slider__container">
+					<div class="swiper-wrapper">
+
+
+						{% for image in product.images %}
+							<div class="swiper-slide product-slider__slide">
+								<img src="{{ image | img_url: 'master' }}" />
+							</div>
+						{% endfor %}
+
+					</div>
+				</div>
+				<div class="product-slider__button-next swiper-button-next">
+					<svg width="18" height="10" fill="none">
+						<path d="M5.25 6.188l.75.75 6-6.063-.75-.75L6 5.438.75.188 0 .938l3 3 2.25 2.25z" fill="#fff" />
+					</svg>
+				</div>
+				<div class="product-slider__button-prev swiper-button-prev">
+					<svg width="18" height="10" fill="none">
+						<path d="M5.25 6.188l.75.75 6-6.063-.75-.75L6 5.438.75.188 0 .938l3 3 2.25 2.25z" fill="#fff" />
+					</svg>
+				</div>
+			</div>
+
+			<div class="gallary-product__thumbs thumbs-slider">
+				<div class="swiper-container thumbs-slider__container">
+					<div class="swiper-wrapper">
+
+
+						{% for image in product.images %}
+							<div class="swiper-slide thumbs-slider__slide">
+								<img src="{{ image | img_url: 'master' }}" />
+							</div>
+						{% endfor %}
+
+					</div>
+				</div>
+			</div>
+
+		</div>
+
+		<div class="product__body">
+			<h1 class="product__title">{{ product.title }}</h1>
+			<form action="#" class="product__form form-product">
+				<div class="form-product__select-label">Choose your length</div>
+		
+				<select style="background: url({{ 'icon-arrow-down.svg' | asset_url }}) center right 20px / 12px 6px no-repeat;" class="form-product__select">
+
+					{% for variant in product.variants %}
+						<option value="60">{{ variant.title }}</option>
+					{% endfor %}
+
+
+				</select>
+
+				<div class="form-product__price">{{ product.price | money }}
+					<span class="form-product__price-label">Tax included</span>
+				</div>
+				<div class="form-product__row">
+					<div class="form-product__counter counter-item">
+						<div class="counter-item__down">-</div>
+						<div class="counter-item__number">1</div>
+						<div class="counter-item__up">+</div>
+					</div>
+					<button class="form-product__button _btn _btn_primary">Add To Cart</button>
+				</div>
+			</form>
+
+			<div class="product__description">
+				{{ product.description}}
+			</div>
+		</div>
+
+	</div>
+</div>
