@@ -3,6 +3,7 @@ All notable changes to this project will be documented in this file.
 
 ## [1.1.0] - 2021-07-25
 ### Added
+- product template
 - header section
 - full screen section
 
